
Changelog
=========

1.7.1 (unreleased)
------------------

- No longer trigger a transaction on a simple read-only view request. Fixes #9.
  [href]

1.7 (2013-11-21)
----------------

- Upgrade to latest collective.geo releases. Please note that an upgrade step
  is necessary for each module using seantis.dir.base. Implemented as follows:
  
  https://github.com/seantis/seantis.dir.contacts/commit/02c18f8f10fb20ac1610d94204e7ff753bfbaadf
  (note that the release is 1.7 instead of 1.6)

- Adds category values to extended data if collective.geo.fastkml is installed.
  Use seantis.dir.base[extended_data] to install. Collective.geo.fastkml will
  be merged into collective.geo.kml in the future at which point this feature
  will no longer be optional.

1.6.1 (2013-06-16)
------------------
- Adds seantis-directory-all, seantis-directory-results or 
  seantis-directory-items to all directory views' body class. This allows
  for easier styling of different seantis.dir.* modules.

1.6 (2013-09-12)
----------------
- Removes almost all css styles - it's the job of seantis.dir.* packages to
  look shiny.
- Removes fieldset/legend from directory search
- Adds category values to extended data if collective.geo.fastkml is installed.
  Use seantis.dir.base[extended_data] to install. Collective.geo.fastkml will
  be merged into collective.geo.kml in the future at which point this feature
  will no longer be optional.

1.5.9
-----
- Update French translations

1.5.8
-----
- Exclude \*.mo files from the release

1.5.7
-----
- Show 'Any' instead of 'Whatever'
- Wrap search text in quotes to avoid query parsers errors

1.5.6
-----
- Fixes group-less forms controlled by seantis.dir.base crashing
- Temporarily reintroduces jq as jQuery alias for collective.geo.mapwidget 
  until the new release is out of beta.

1.5.5
-----
- Put search and categories on different lines if more than two categories
  and the searchbox is active

1.5.4
-----